[gd_scene load_steps=2 format=3 uid="uid://spin_wheel_ui_scene"]

[ext_resource type="Script" path="res://scripts/spin_wheel_ui.gd" id="1"]

[node name="SpinWheelUI" type="CanvasLayer"]
script = ExtResource("1")
layer = 10

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="WheelContainer" type="Node2D" parent="Panel"]
position = Vector2(300, 300)

[node name="Weapon1" type="Panel" parent="Panel/WheelContainer"]
offset_left = -60.0
offset_top = -250.0
offset_right = 60.0
offset_bottom = -130.0

[node name="Icon1" type="ColorRect" parent="Panel/WheelContainer/Weapon1"]
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="Name1" type="Label" parent="Panel/WheelContainer/Weapon1"]
offset_left = 5.0
offset_top = 95.0
offset_right = 115.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Weapon"
horizontal_alignment = 1

[node name="Weapon2" type="Panel" parent="Panel/WheelContainer"]
offset_left = 150.0
offset_top = -180.0
offset_right = 270.0
offset_bottom = -60.0

[node name="Icon2" type="ColorRect" parent="Panel/WheelContainer/Weapon2"]
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="Name2" type="Label" parent="Panel/WheelContainer/Weapon2"]
offset_left = 5.0
offset_top = 95.0
offset_right = 115.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Weapon"
horizontal_alignment = 1

[node name="Weapon3" type="Panel" parent="Panel/WheelContainer"]
offset_left = 150.0
offset_top = 60.0
offset_right = 270.0
offset_bottom = 180.0

[node name="Icon3" type="ColorRect" parent="Panel/WheelContainer/Weapon3"]
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="Name3" type="Label" parent="Panel/WheelContainer/Weapon3"]
offset_left = 5.0
offset_top = 95.0
offset_right = 115.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Weapon"
horizontal_alignment = 1

[node name="Weapon4" type="Panel" parent="Panel/WheelContainer"]
offset_left = -60.0
offset_top = 130.0
offset_right = 60.0
offset_bottom = 250.0

[node name="Icon4" type="ColorRect" parent="Panel/WheelContainer/Weapon4"]
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="Name4" type="Label" parent="Panel/WheelContainer/Weapon4"]
offset_left = 5.0
offset_top = 95.0
offset_right = 115.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Weapon"
horizontal_alignment = 1

[node name="Weapon5" type="Panel" parent="Panel/WheelContainer"]
offset_left = -270.0
offset_top = 60.0
offset_right = -150.0
offset_bottom = 180.0

[node name="Icon5" type="ColorRect" parent="Panel/WheelContainer/Weapon5"]
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="Name5" type="Label" parent="Panel/WheelContainer/Weapon5"]
offset_left = 5.0
offset_top = 95.0
offset_right = 115.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Weapon"
horizontal_alignment = 1

[node name="Arrow" type="ColorRect" parent="Panel"]
offset_left = 280.0
offset_top = 30.0
offset_right = 320.0
offset_bottom = 80.0
color = Color(1, 0.2, 0.2, 1)

[node name="ArrowTip" type="Polygon2D" parent="Panel/Arrow"]
position = Vector2(20, 50)
polygon = PackedVector2Array(-15, 0, 15, 0, 0, 20)
color = Color(1, 0.2, 0.2, 1)

[node name="TierLabel" type="Label" parent="Panel"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "BRONZE ATM"

[node name="StatusLabel" type="Label" parent="Panel"]
offset_left = 150.0
offset_top = 520.0
offset_right = 450.0
offset_bottom = 560.0
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 18
text = "Spinning..."
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel"]
offset_left = 220.0
offset_top = 540.0
offset_right = 380.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 16
text = "Close"
visible = false
